@@ -1,0 +1,55 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<test-data>
+    <test-code>
+        <description><![CDATA[
+ok
+     ]]></description>
+        <expected-problems>0</expected-problems>
+        <code><![CDATA[
+public class Test {
+    private static final Log __log = LogFactory.getLog(Test.class);
+    public void test() {
+        // okay:
+        __log.debug("log something");
+        
+        // okay:
+        __log.debug("log something with exception", e);
+        
+        // good:
+        if (__log.isDebugEnabled()) {
+        __log.debug("bla" + "",e );
+        }
+    }
+}
+     ]]></code>
+    </test-code>
+    <test-code>
+        <description><![CDATA[
+Complex logging without guard
+     ]]></description>
+        <expected-problems>2</expected-problems>
+        <code><![CDATA[
+public class Test {
+    private static final Log __log = LogFactory.getLog(Test.class);
+    public void test() {
+        // okay:
+        __log.debug("log something");
+        
+        // okay:
+        __log.debug("log something with exception", e);
+        
+        // bad:
+        __log.debug("log something" + " and " + "concat strings");
+        
+        // bad:
+        __log.debug("log something" + " and " + "concat strings", e);
+        
+        // good:
+        if (__log.isDebugEnabled()) {
+        __log.debug("bla" + "",e );
+        }
+    }
+}
+     ]]></code>
+    </test-code>
+</test-data>
