@@ -321,6 +321,7 @@
             <li>Lucian Ciufudean - RedundantFieldInitializerRule</li>
             <li>Andreas Dangel - GodClass and LawOfDemeter rules, several bugfixes and cleanup</li>
             <li>Riku Nykanen - patch improving TooManyMethods rule</li>
+            <li>Tammo van Lessen - new rule GuardDebugLogging for Jakarta Commons Logging ruleset.</li>
         </ul>
         </subsection>
         <subsection name="Organizations">
